@startuml
namespace models {
    class Usuario {
        + id: int
        + username: str
        + password: str
        + es_admin: bool
        + es_empleado: bool
        + registrar_usuario(self) -> None
        + verificar_password(self, password: str) -> bool
        + obtener_rol(self) -> str
    }

    class Producto {
        + id: int
        + nombre: str
        + precio_publico: float
        + tipo: str
        + ventas: int
        + vender(self) -> None
        + tiene_stock_suficiente(self) -> bool
        + calcular_costo(self) -> float
        + calcular_calorias(self) -> int
        + rentabilidad(self) -> float
    }

    class Ingrediente {
        + id: int
        + nombre: str
        + precio: float
        + calorias: int
        + inventario: int
        + es_vegetariano: bool
        + abastecer(self, cantidad: int) -> None
        + reducir_inventario(self, cantidad: int) -> None
        + es_sano(self) -> bool
    }
}

namespace controllers {
    class HeladeriaController {
        + listar_productos(self) -> list
        + obtener_producto_por_id(self, id: int) -> dict
        + vender_producto_por_id(self, id: int) -> dict
        + registro_usuario(self, username: str, password: str, rol: str) -> dict
    }
}

models.Usuario "1" --> "0..*" models.Producto : interactúa con
models.Producto "0..*" -- "0..*" models.Ingrediente : contiene
@enduml